# lynx

./: .dockerignore  .env  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  env.docker  env.example  env.test  run-tests.sh  start-server.sh
chrome/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
migrations/: 001_create_links_table.sql
src/: config.rs  database.rs  lib.rs  main.rs  models.rs  redirector.rs  templates.rs
src/handlers/: api.rs  mod.rs  ui.rs
static/: style.css
templates/: add.html  base.html  edit.html  home.html  search.html
tests/: integration_tests.rs
