[package]
name = "lynx"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates (using Askama - simple and well supported)
askama = "0.12"
askama_axum = "0.4"

# Environment
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.8"
tokio-test = "0.4"
